[package]
name = "ttoken-test-contract"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ttoken-types = { workspace = true }

execution-core = { workspace = true }
rusk-abi = { workspace = true, features = ["abi", "dlmalloc"] }

[lib]
crate-type = ["cdylib"]
